gccida/c3/thread_prologue_and_epilogue_insns
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8062:4: error: expected ';' after expression
rtx m; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8062:5: error: use of undeclared identifier 'm'
rtx m; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8064:4: error: expected ';' after expression
rtx v42; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8064:5: error: use of undeclared identifier 'v42'
rtx v42; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8069:4: error: expected ';' after expression
rtx new_sp_equiv_reg; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8069:5: error: use of undeclared identifier 'new_sp_equiv_reg'
rtx new_sp_equiv_reg; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8075:4: error: expected ';' after expression
rtx v53; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8075:5: error: use of undeclared identifier 'v53'
rtx v53; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8097:4: error: expected ';' after expression
rtx v75; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8097:5: error: use of undeclared identifier 'v75'
rtx v75; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8098:4: error: expected ';' after expression
rtx v76; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8098:5: error: use of undeclared identifier 'v76'
rtx v76; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8114:4: error: expected ';' after expression
rtx v92; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8114:5: error: use of undeclared identifier 'v92'
rtx v92; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8122:4: error: expected ';' after expression
rtx v100; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8122:5: error: use of undeclared identifier 'v100'; did you mean 'v10'?
rtx v100; // rax 
    ^~~~
    v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8032:9: note: 'v10' declared here
__int64 v10; // rcx 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8128:4: error: expected ';' after expression
rtx to; // [rsp+0h] [rbp-A8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8128:5: error: use of undeclared identifier 'to'
rtx to; // [rsp+0h] [rbp-A8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/function.c:8129:4: error: expected ';' after expression
rtx toa; // [rsp+0h] [rbp-A8h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/thread_prologue_and_epilogue_insns/src/obj/function.o] Error 1
